Fixed forecast display on mobile devices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Comfortaa:400,700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -197,7 +196,7 @@
   margin: 20px;
   overflow-y: scroll;
   height: 90%;
-  max-height: 60vh;
+  max-height: 80vh;
   margin-bottom: 50px;
   -webkit-transition: 0.6s;
   transition: 0.6s;
@@ -330,6 +329,7 @@
     -ms-grid-column-align: center;
         justify-self: center;
     border-radius: 80px 80px 0 0;
+    height: 100vh;
   }
 }
 
