--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -133,7 +133,7 @@
       margin: 20px;
       overflow-y: scroll;
       height: 90%;
-      max-height: 60vh;
+      max-height: 80vh;
       margin-bottom: 50px;
       transition: 0.6s;
       &.hide {
