--- a/src/style/_media.scss
+++ b/src/style/_media.scss
@@ -69,6 +69,7 @@
       width: 90%;
       justify-self: center;
       border-radius: 80px 80px 0 0;
+      height: 100vh;
     }
   }
 }
